--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 #content {
 	margin-left: auto;
 	margin-right: auto;
+	margin-top: 200px;
 	text-align: center;
 }
 
@@ -28,4 +29,35 @@ input[type=submit] {
 
 input[type=submit]:hover {
 	border: 1px solid #A5A5A5;
+}
+
+ul {
+	text-align: right;
+}
+
+li {
+	list-style-type: none;
+	display: inline;
+}
+
+li a {
+	position: relative;
+	top: -7px;
+	text-decoration: none;
+	color: black;
+	font-family: Arial;
+	font-size: 13px;
+	margin: 0px 8px;
+}
+
+li a:hover {
+	text-decoration: underline;
+}
+
+li img {
+	margin: 0px 8px;
+}
+
+#prof {
+	border-radius: 100%;
 }
