--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #content {
 	margin-left: auto;
+	margin-top: 160px;
 	margin-right: auto;
-	margin-top: 200px;
 	text-align: center;
 }
 
@@ -40,7 +40,7 @@ li {
 	display: inline;
 }
 
-li a {
+#navbar a {
 	position: relative;
 	top: -7px;
 	text-decoration: none;
@@ -50,7 +50,7 @@ li a {
 	margin: 0px 8px;
 }
 
-li a:hover {
+#navbar a:hover, #footer a:hover{
 	text-decoration: underline;
 }
 
@@ -60,4 +60,29 @@ li img {
 
 #prof {
 	border-radius: 100%;
+}
+
+#footer {
+	margin-top: 500px;
+	height: 50px;
+	width: 100%;
+	background-color: #ECECEC;
+}
+
+#footer a {
+	position: relative;
+	top: 15px;
+	text-decoration: none;
+	color: gray;
+	font-family: Arial;
+	font-size: 13px;
+	margin: 0px 6px;
+}
+
+.left {
+	float: left;
+}
+
+.right {
+	float: right;
 }
